# Text-To-BPMN-Diagram

./: .env.example  app.py  pyproject.toml  requirements.txt
