[project]
name = "emad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aspose-diagram>=25.9.0",
    "graphviz>=0.21",
    "openai>=2.0.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "vsdx>=0.5.1",
]

[tool.uv.workspace]
members = [
    "web",
]
